# Prism

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DECISION-INDEX.md  GLOSSARY.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/prism-adapters/: Cargo.toml
crates/prism-adapters/src/: bulk_import.rs  classification_gate.rs  connection_adapters.rs  connection_lifecycle.rs  connection_operations.rs  framework.rs  health.rs  lib.rs  log_ingestion.rs
crates/prism-adapters/src/adapters/: automation_anywhere.rs  blue_prism.rs  make.rs  mod.rs  n8n.rs  power_automate.rs  robocorp.rs  script.rs  uipath.rs  zapier.rs
crates/prism-api/: Cargo.toml
crates/prism-api/src/: config.rs  main.rs  state.rs
crates/prism-api/src/middleware/: mod.rs
crates/prism-api/src/routes/: adapters.rs  admin.rs  approvals.rs  audit.rs  automations.rs  examiner.rs  health.rs  mod.rs
crates/prism-audit/: Cargo.toml
crates/prism-audit/src/: audit_export.rs  event_store.rs  examiner.rs  lib.rs  merkle_chain.rs  pg_repository.rs  privilege_audit.rs  tamper_response.rs
crates/prism-compliance/: Cargo.toml
crates/prism-compliance/src/: audit_compartment.rs  bsa_aml.rs  compartment.rs  compliance_profile.rs  crypto_shredding.rs  error_leakage.rs  lib.rs  rcl.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: error.rs  lib.rs  repository.rs  tenant_filter.rs  traits.rs
crates/prism-core/src/types/: entities.rs  enums.rs  identifiers.rs  mod.rs  requests.rs
crates/prism-credentials/: Cargo.toml
crates/prism-credentials/src/: caas.rs  federation.rs  jit.rs  lib.rs  rotation.rs  vault.rs
crates/prism-governance/: Cargo.toml
crates/prism-governance/src/: admin_undo.rs  alert_routing.rs  approval_chain.rs  audit_path.rs  break_glass.rs  committee.rs  connection_consent.rs  coverage_enforcement.rs  csa_engine.rs  def.rs  drprr.rs  feature_flags.rs  governance_hooks.rs  lca.rs  liability.rs  lib.rs  meta_policy.rs  pg_tenant_repo.rs  project.rs  query_analytics.rs  rejection_validation.rs  rule_engine.rs  rule_versioning.rs  shared_services.rs  sod.rs  tenant.rs
crates/prism-graph/: Cargo.toml
crates/prism-graph/src/: acia.rs  adg.rs  blast_radius.rs  conflict.rs  data_model.rs  lib.rs  shadow.rs  sync_coordinator.rs  sync_service.rs
crates/prism-identity/: Cargo.toml
crates/prism-identity/src/: dual_reporting.rs  external_party.rs  lib.rs  lifecycle.rs  pg_repository.rs  role_mapping.rs  service_principal.rs
crates/prism-lifecycle/: Cargo.toml
crates/prism-lifecycle/src/: lib.rs  org_change.rs  review_cycle.rs  state_machine.rs  succession.rs  sunset.rs
crates/prism-llm/: Cargo.toml
crates/prism-llm/src/: hot_swap.rs  intelligence.rs  lib.rs  model_registry.rs  provider.rs  router.rs
crates/prism-runtime/: Cargo.toml
crates/prism-runtime/src/: admin.rs  concurrency.rs  environment.rs  event_bus.rs  lib.rs  resilience.rs  saga.rs  trigger_auth.rs
docs/meta/: BUILD-LOG.md  DEBT.md  IMPLEMENTATION-STATUS.md  PATTERNS.md
migrations/: 001_create_tenants.sql  002_create_roles.sql  003_create_users.sql  004_create_compliance_profiles.sql  005_create_service_principals.sql  006_create_automations.sql  007_create_approval_chains.sql  008_create_audit_events.sql  009_create_compartments.sql
spec/: 00-overview-expanded.md  01-governance-layer-expanded.md  01-governance-layer-kernel-v6.md  02-data-model-expanded.md  02-data-model-kernel-v6.md  03-connection-layer-expanded.md  04-intelligence-layer-expanded.md  05-llm-routing-expanded.md  05-llm-routing-kernel-v6.md  06-decision-support-expanded.md  07-interface-expanded.md  08-component-catalog-expanded.md  09-service-account-catalog-expanded.md  09-service-account-kernel-v6.md  10-value-flywheel-expanded.md  11-unknown-unknowns-expanded.md  12-v2-handoff-contract-expanded.md  13-scalability-infrastructure-expanded.md  13-scalability-kernel-v6.md
ui/desktop/: README.md
validation/: Platform_Requirements_and_Exceptions.xlsx  _generate_progress.py  _xverify_phase_a.py  _xverify_phase_a_report.txt  sync-workbook.py
