[package]
name = "prism-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prism-core = { workspace = true }
prism-governance = { workspace = true }
prism-identity = { workspace = true }
prism-compliance = { workspace = true }
prism-credentials = { workspace = true }
prism-lifecycle = { workspace = true }
prism-audit = { workspace = true }
prism-graph = { workspace = true }
prism-llm = { workspace = true }
prism-adapters = { workspace = true }
prism-runtime = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
