[package]
name = "prism-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prism-core = { workspace = true }
prism-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
