[package]
name = "prism-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prism-core = { workspace = true }
prism-audit = { workspace = true }
prism-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
