[package]
name = "prism-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prism-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
